example-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
