example-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.core.dagandersen.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: hello-web
            port:
              number: 8080
